--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -1,28 +1,32 @@
 .we-see_landing {
     display: flex;
     justify-content: start;
-    padding: 5rem;
+    padding-left: 15rem;
+    padding-top: 5rem;
 }
 
 .we-see_landing-text {
-    max-width: 800px; 
+    max-width: 800px;
 }
 
 .we-see_landing-text h1 {
     font-size: 4rem; 
     color: #333; 
+    text-align: center;
 }
 
 .we-see_landing-text h4 {
     font-size: 2rem; 
     max-width: 600px;
-    padding-left: 4rem; 
+    text-align: center;
+    padding-left: 2rem;
 }
 
 .we-see_landing-logo{
     width: 100%;
     height: auto; 
-    padding-left: 5rem;
+    padding-left: 20rem;
+    align-self: flex-end;
 }
 
 @media (max-width: 1610px) {
@@ -51,9 +55,9 @@
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1350px) {
     .we-see_landing {
-        padding: 3rem;
+        padding: 1rem;
         justify-content: center;
         text-align: center;
     }
@@ -63,7 +67,34 @@
     }
 
     .we-see_landing-text h1 {
-        font-size: 3rem;
+        font-size: 2.3rem;
+    }
+
+    .we-see_landing-text h4 {
+        font-size: 1.5rem;
+        padding-left: 0;
+        max-width: 100%;
+    }
+
+    .we-see_landing-logo {
+        max-width: 100%;
+    }
+}
+
+
+@media (max-width: 1140px) {
+    .we-see_landing {
+        padding: 2rem;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .we-see_landing-text {
+        max-width: 100%;
+    }
+
+    .we-see_landing-text h1 {
+        font-size: 2rem;
     }
 
     .we-see_landing-text h4 {
@@ -86,13 +117,14 @@
     }
 
     .we-see_landing-text h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .we-see_landing-text h4 {
         font-size: 1.25rem;
-        padding-left: 0;
-        max-width: 100%;
+        padding-left: 8.5rem;
+        text-align: center;
+        max-width: 70%;
     }
 
     .we-see_landing-logo {
