--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,6 +9,9 @@
     padding: 0.25rem; 
     position: fixed;
     bottom: 0; 
+    left: 0; /* Ensure it starts from the left edge */
     width: 100%; 
     z-index: 1000; 
+    margin: 0; /* Remove any margin */
+    box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
 }
