--- a/src/Components/HomeNavbar/HomeNavbar.css
+++ b/src/Components/HomeNavbar/HomeNavbar.css
@@ -1,15 +1,14 @@
 .we-see_homenav {
-    background-color: #ff7f00; 
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-          'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-          sans-serif;
-    color: #fff; 
+    background-color: #ff7f00;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.6rem 2rem;
     position: sticky;
     top: 0;
+    width: 100%; 
     z-index: 1000;
 }
 
