--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,7 +7,6 @@
 
 .we-see_navbar-logo {
     font-size: 1.5rem;
-    padding-left: 2rem;
 }
 
 .we-see_navbar-tags {
@@ -15,7 +14,7 @@
     justify-content: space-between;
     align-items: center; 
     font-size: larger;
-    padding-right: 4rem;
+    /* padding-right: 4rem; */
 }
 
 .navbar-item {
