--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,49 +1,67 @@
-/* src/Components/Card.css */
 .card-container {
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin: 1rem;
-    padding: 1rem;
+    margin: 1.5rem;
+    padding: 1.5rem;
     text-align: center;
-    max-width: 300px;
+    max-width: 100rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
 }
 
 .card-img {
-    max-width: 100%;
+    max-width: 15%;
     height: auto;
     border-radius: 5px;
 }
 
+.card-text {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
 .card-title {
-    font-size: 1.5rem;
-    margin: 0.5rem 0;
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
 }
 
 .card-description {
     font-size: 1rem;
-    margin-bottom: 1rem;
+    font-weight: 400;
+    max-width: 80%;
+    align-self: center;
+}
+
+.card-button {
+    padding-left: 2rem;
+    align-self:center;
 }
 
 .card-btn {
-    display: inline-block;
-    padding: 0.5rem 1rem;
     background-color: #ff7f00;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 1rem;
     text-decoration: none;
     transition: background-color 0.3s;
+    padding: 1rem;
+    font-size: 1.25rem;
+    display: inline-block; 
 }
 
 .card-btn:hover {
     background-color: #e65c00;
 }
 
-/* Responsive Adjustments */
+
 @media (max-width: 768px) {
     .card-container {
+        flex-direction: column; 
         max-width: 100%;
         margin: 0.5rem;
+        text-align: center;
     }
 
     .card-title {
@@ -52,5 +70,10 @@
 
     .card-description {
         font-size: 0.875rem;
+    }
+
+    .card-button {
+        padding-left: 0;
+        margin-top: 1rem;
     }
 }
