--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -3,4 +3,9 @@
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
+    padding: 10rem;
+}
+
+.cards-container{
+    padding-top: 20rem;
 }
